--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url('https://www.freecreatives.com/wp-content/uploads/2016/03/Free-Light-Wooden-Background.jpg');
+    background-size: 100%;
+}
