--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">grocery-bg</a>
+      <a class="navbar-brand">grocery-bg</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,7 +25,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">My Account</a></li>        
-        <li><a href="#">Sign In</a></li>
+        <li><a [routerLink]="['/login']">Log In</a></li>
         <li><a href="#">Cart</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
