--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@ body {
     background-image: url('https://www.freecreatives.com/wp-content/uploads/2016/03/Free-Light-Wooden-Background.jpg');
     background-size: 100%;
 }
+
+#gb-login {
+    width: 30%;
+    margin-left: 34%;
+    margin-right: 34%;
+}
