--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,31 @@
 <div id="gb-login">
-  <h1>Log In</h1>
-  <form>
+  <h3>Log In</h3>
+  <form (ngSubmit)="onSubmit()">
     <div>
       <div class="form-group">
-        <label for="email">E-Mail Address*</label>
+        <label for="email">E-Mail Address</label>
         <input type="text"
               class="form-control"
-              id="email">
+              id="email"
+              ngModel 
+              name="email"
+              required
+              pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
+              #email="ngModel">
+        <span [hidden]="email.valid || email.untouched" class="error-message">
+          Invalide E-mail Address
+        </span>
       </div>
     </div>
     <div class="form-group">
-      <label for="password">Password*</label>
+      <label for="password">Password</label>
       <input type="password"
             class="form-control"
             id="password">
-    </div>
-    <div class="form-group">
-      <label for="confirm-password">Confirm Password*</label>
-      <input type="confirm-password"
-            class="form-control"
-            id="confirm-password">
-    </div>
-    <div class="radio">
-      <label>
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Sign In</button>
+    </div>    
+    <button type="submit" class="btn btn-primary">Sign In</button>  
   </form>
+  <div>New Customer? 
+    <a [routerLink]="['/register']">Join free now</a>
+  </div>
 </div>
