--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,17 @@ body {
     background-size: 100%;
 }
 
-#gb-login {
+#gb-login, #gb-register {
     width: 30%;
     margin-left: 34%;
     margin-right: 34%;
+}
+
+form {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+.error-message {
+    color: red;
 }
